@startuml
left to right direction
hide circle
hide empty members

skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 80
skinparam minClassWidth 160
skinparam defaultFontName Arial
skinparam dpi 150

skinparam entity {
  BackgroundColor #F8F9FA
  BorderColor #343A40
  FontColor #212529
  FontSize 14
  BorderThickness 1.5
  RoundCorner 6
}

' ============ CỘT 1: TÀI KHOẢN & NGƯỜI DÙNG ============
entity TaiKhoan
entity UngVien
entity NhaTuyenDung
entity ThongBao

' ============ CỘT 2: CÔNG TY & TIN TUYỂN DỤNG ============
entity CongTy
entity CtCtyNganh
entity TinTuyenDung
entity CtKvTin
entity KyNang
entity ChiTietKyNangTin

' ============ CỘT 3: HỒ SƠ & ỨNG TUYỂN ============
entity HoSoCv
entity ChiTietCv
entity ChiTietKyNangCv
entity DonUngTuyen
entity LichSuTrangThai
entity LichPhongVan

' ============ BỐ CỤC 3 CỘT ============
TaiKhoan -[hidden]right-> CongTy
CongTy -[hidden]right-> HoSoCv

UngVien -[hidden]down-> NhaTuyenDung
NhaTuyenDung -[hidden]down-> ThongBao


CtCtyNganh -[hidden]down-> TinTuyenDung
TinTuyenDung -[hidden]down-> CtKvTin
KyNang -[hidden]down-> ChiTietKyNangTin

ChiTietCv -[hidden]down-> ChiTietKyNangCv
ChiTietKyNangCv -[hidden]down-> DonUngTuyen
DonUngTuyen -[hidden]down-> LichSuTrangThai
LichSuTrangThai -[hidden]down-> LichPhongVan

' ============ QUAN HỆ ============
TaiKhoan ||--o| UngVien
TaiKhoan ||--o| NhaTuyenDung
TaiKhoan ||--o{ ThongBao
TaiKhoan ||--o{ LichSuTrangThai

CongTy ||--o{ NhaTuyenDung
CongTy ||--o{ TinTuyenDung
CongTy ||--o{ CtCtyNganh
NhaTuyenDung ||--o{ TinTuyenDung
TinTuyenDung ||--o{ CtKvTin
TinTuyenDung ||--o{ ChiTietKyNangTin
KyNang ||--o{ ChiTietKyNangTin

UngVien ||--o{ HoSoCv
HoSoCv ||--o{ ChiTietCv
HoSoCv ||--o{ ChiTietKyNangCv
KyNang ||--o{ ChiTietKyNangCv

TinTuyenDung ||--o{ DonUngTuyen
HoSoCv ||--o{ DonUngTuyen
DonUngTuyen ||--o{ LichSuTrangThai
DonUngTuyen ||--o{ LichPhongVan
NhaTuyenDung ||--o{ LichPhongVan

@enduml